--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
   },
   "require": {
     "doctrine/doctrine-bundle":  "^2.0",
-    "symfony/framework-bundle": "^4.0|^5.0.*",
+    "symfony/framework-bundle": "^4.0|^5.0",
     "sensio/framework-extra-bundle": "^5.1",
-    "symfony/security-bundle": "^4.0|^5.0.*",
+    "symfony/security-bundle": "^4.0|^5.0",
     "ext-json": "*"
   }
 }
