--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "require": {
     "doctrine/doctrine-bundle":  "^2.0",
     "symfony/framework-bundle": "^4.0|^5.0",
-    "sensio/framework-extra-bundle": "^5.1",
+    "sensio/framework-extra-bundle": "^5.1|^6.0",
     "symfony/security-bundle": "^4.0|^5.0",
     "ext-json": "*"
   }
